--- a/components/webserver/utils/index.html
+++ b/components/webserver/utils/index.html
@@ -269,22 +269,21 @@
             ssid_text += String.fromCharCode(attack_content[index + 1 + i]);
         }
         index = index + attack_content[index] + 1;
-        var pmkid_cnt = 0;
-        for(let i = 0; i < attack_content_size - index; i = i + 1) {
-            if((i % 16) == 0){
-                pmkid += "<br>";
-                pmkid += "</code>PMKID #" + pmkid_cnt + ": <code>";
-                pmkid_cnt += 1;
-            }
-            pmkid += uint8ToHex(attack_content[index + i]);
-        }
         document.getElementById("result-content").innerHTML = "";
         document.getElementById("result-content").innerHTML += "MAC AP: <code>" + mac_ap + "</code><br>";
         document.getElementById("result-content").innerHTML += "MAC STA: <code>" + mac_sta + "</code><br>";
-        document.getElementById("result-content").innerHTML += "(E)SSID: <code>" + ssid + "</code> (" + ssid_text + ")";
-        document.getElementById("result-content").innerHTML += "<code>" + pmkid + "</code><br>";
-        document.getElementById("result-content").innerHTML += "<br>Hashcat ready format:"
-        document.getElementById("result-content").innerHTML += "<code>" + pmkid + "*" + mac_ap + "*" + mac_sta  + "*" + ssid  + "</code><br>";
+        document.getElementById("result-content").innerHTML += "(E)SSID: <code>" + ssid + "</code> (" + ssid_text + ")<br>";
+        var pmkid_cnt = 0;
+        for(let i = 0; i < attack_content_size - index; i = i + 1) {
+            pmkid += uint8ToHex(attack_content[index + i]);
+            if((i % 16) == 15){
+                document.getElementById("result-content").innerHTML += "PMKID #" + pmkid_cnt + ": <code>" + pmkid + "</code><br>";
+                document.getElementById("result-content").innerHTML += "Hashcat ready format 22000 #" + pmkid_cnt + ": <code>WPA*01*" + pmkid + "*" + mac_ap + "*" + mac_sta  + "*" + ssid  + "***</code><br>";
+                pmkid_cnt += 1;
+                pmkid = "";
+            }
+        }
+
     }
     function resultHandshake(attack_content, attack_content_size){
         document.getElementById("result-content").innerHTML = "";
